# discord-rpc

./: Cargo.toml
src/: backoff.rs  connection.rs  lib.rs  messages.rs  presence.rs
src/connection/: unix.rs  windows.rs
src/register/: macos.rs
