[package]
name = "discord-rpc"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
parking_lot = "0.11"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
